@@ -603,32 +603,20 @@ CloudCmd._ajaxLoad               = function(pFullPath, pOptions){
             }
         }
         
-        DOM.ajax({
+        DOM.getCurrentFileContent({
             url     : lFSPath,
-            error   : DOM.Images.showError,
-            
-            success :function(data, textStatus, jqXHR){                                            
-                /* если такой папки (или файла) нет
-                 * прячем загрузку и показываем ошибку
-                 */                 
-                if(!jqXHR.responseText.indexOf('Error:'))
-                    return DOM.showError(jqXHR);
-
-                CloudCmd._createFileTable(lPanel, data);
+            success :function(pData){
+                CloudCmd._createFileTable(lPanel, pData);
                 CloudCmd._changeLinks(lPanel);
-                                                            
-                /* Сохраняем структуру каталогов в localStorage,
-                 * если он поддерживаеться браузером
-                 */
                 /* переводим таблицу файлов в строку, для
-                * сохранения в localStorage
-                */
-                var lJSON_s = Util.stringifyJSON(data);
+                 * сохранения в localStorage
+                 */
+                var lJSON_s = Util.stringifyJSON(pData);
                 Util.log(lJSON_s.length);
                 
                 /* если размер данных не очень бошьой
-                * сохраняем их в кэше
-                */
+                 * сохраняем их в кэше
+                 */
                 if(lJSON_s.length < 50000 )
                     DOM.Cache.set(lPath, lJSON_s);
             }
